# c-lifetimes

./: .gitignore  README.md  c_lifetimes.opam  dune-project  lifeline.opam
.github/workflows/: blank.yml  default.yml
docs/: loop_alloc.c
docs/CompCert/: binary_tree.c  dbisect.c  eval_atA_times_u.c  make_list.c  nsieve.c  write_frequencies.c
docs/canonical/: use_after_free.c
docs/examples/: free_ptr.c  loop_alloc.c  mutate_ptr.c  return_alloc.c  stack.c  swap.c
docs/neovim/: strbuf.c  try_malloc.c
lib/: abstract.ml  abstract_loc.ml  analysis.ml  checking.ml  cil_wrappers.ml  constraints.ml  dune  helpers.ml  inference.ml  lifeline.ml  transfer.ml  variables.ml  vitality.ml
lib/dataflow/: abstract_state.ml  assigned.ml  lattice.ml  liveness.ml  points_to.ml
test/: dune  test.ml
